--- a/src/app/shared/components/checkbox/checkbox.component.scss
+++ b/src/app/shared/components/checkbox/checkbox.component.scss
@@ -187,7 +187,7 @@
   }
 
   &--warning {
-    color: var(--color-warning);
+    color: var(--color-warning-text, var(--color-warning));
   }
 
   &--error {
