--- a/src/app/shared/components/input/input-footer/input-footer.component.scss
+++ b/src/app/shared/components/input/input-footer/input-footer.component.scss
@@ -17,7 +17,7 @@
     }
 
     &--warning {
-      color: var(--color-warning);
+      color: var(--color-warning-text, var(--color-warning));
     }
 
     &--success {
