--- a/src/app/shared/components/radio/radio.component.scss
+++ b/src/app/shared/components/radio/radio.component.scss
@@ -143,7 +143,7 @@
   }
 
   &--warning {
-    color: var(--color-warning);
+    color: var(--color-warning-text, var(--color-warning));
   }
 
   &--error {
