--- a/src/app/shared/components/textarea/textarea.component.scss
+++ b/src/app/shared/components/textarea/textarea.component.scss
@@ -215,7 +215,7 @@
   }
 
   &--warning {
-    color: var(--color-warning);
+    color: var(--color-warning-text, var(--color-warning));
   }
 
   &--error {
